--- a/mcarbonPortal/src/app/user-management/user-management.component.html
+++ b/mcarbonPortal/src/app/user-management/user-management.component.html
@@ -39,7 +39,7 @@
                   mat-raised-button
                   (click)="createDialog()"
                 >
-                  <mat-icon>add</mat-icon>Create New User
+                  <mat-icon>add</mat-icon>Create User
                 </button>
               </div>
               <div class="col-4 offset-2 align-self-center">
