--- a/mcarbonPortal/src/app/user-management/user-management.component.html
+++ b/mcarbonPortal/src/app/user-management/user-management.component.html
@@ -44,7 +44,13 @@
               </div>
               <div class="col-4 offset-2 align-self-center">
                 <div class="box">
-                  <input type="text" placeholder="Search..." matInput (keyup)="searchData($event)" #input />
+                  <input
+                    type="text"
+                    placeholder="Search..."
+                    matInput
+                    (keyup)="searchData($event)"
+                    #input
+                  />
                   <a href="#" class="icon">
                     <i>
                       <mat-icon class="material-icons">search</mat-icon>
@@ -65,12 +71,60 @@
                 [dataSource]="dataSourceWithPageSize"
                 #sort="matSort"
               >
-                <ng-container
+                <!-- <ng-container
                   [matColumnDef]="column"
                   *ngFor="let column of displayedColumns"
                 >
                   <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
                   <td mat-cell *matCellDef="let user">{{ user[column] }}</td>
+                </ng-container> -->
+
+                <ng-container matColumnDef="userFname">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                    First Name
+                  </th>
+                  <td mat-cell *matCellDef="let user">{{ user.userFname }}</td>
+                </ng-container>
+
+                <ng-container matColumnDef="userLname">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                    Last Name
+                  </th>
+                  <td mat-cell *matCellDef="let user">{{ user.userLname }}</td>
+                </ng-container>
+
+                <ng-container matColumnDef="loginId">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                    Login ID
+                  </th>
+                  <td mat-cell *matCellDef="let user">{{ user.loginId }}</td>
+                </ng-container>
+
+                <ng-container matColumnDef="contact">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                    Contact
+                  </th>
+                  <td mat-cell *matCellDef="let user">{{ user.contact }}</td>
+                </ng-container>
+
+                <ng-container matColumnDef="email">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                    Email
+                  </th>
+                  <td mat-cell *matCellDef="let user">{{ user.email }}</td>
+                </ng-container>
+
+                <ng-container matColumnDef="expDate">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                    Expiry Date
+                  </th>
+                  <td mat-cell *matCellDef="let user">{{ user.expDate }}</td>
+                </ng-container>
+                <ng-container matColumnDef="status">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                    Status
+                  </th>
+                  <td mat-cell *matCellDef="let user">{{ user.status }}</td>
                 </ng-container>
 
                 <ng-container matColumnDef="Action">
@@ -90,15 +144,43 @@
                       <mat-icon>more_vert</mat-icon>
                     </button>
                     <mat-menu #menu="matMenu" xPosition="before">
-                      <button class="btn-action" mat-menu-item (click)="updateDialog(user.userCode)">
+                      <button
+                        class="btn-action"
+                        mat-menu-item
+                        (click)="viewDialog()"
+                      >
+                        <mat-icon style="color: #009688"
+                          >remove_red_eye</mat-icon
+                        >
+                        <span>View</span>
+                      </button>
+                      <button
+                        class="btn-action"
+                        mat-menu-item
+                        (click)="updateDialog(user.userCode)"
+                      >
                         <mat-icon style="color: #009688">edit</mat-icon>
                         <span>Edit</span>
                       </button>
-                      <button class="btn-action" mat-menu-item  (click)="deleteData(user.userCode)">
+                      <button
+                        class="btn-action"
+                        mat-menu-item
+                        (click)="deleteData(user.userCode)"
+                      >
                         <mat-icon style="color: #009688"
                           >delete_outline</mat-icon
                         >
                         <span>Delete</span>
+                      </button>
+                      <button
+                        class="btn-action"
+                        mat-menu-item
+                        (click)="expireData()"
+                      >
+                        <mat-icon style="color: #009688"
+                          >power_settings_new</mat-icon
+                        >
+                        <span>Expire</span>
                       </button>
                     </mat-menu>
                   </td>
@@ -112,7 +194,9 @@
                 ></tr>
 
                 <tr class="mat-row" *matNoDataRow>
-                  <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+                  <td class="mat-cell" colspan="4">
+                    No data matching the filter "{{ input.value }}"
+                  </td>
                 </tr>
               </table>
               <mat-paginator
