--- a/mcarbonPortal/src/app/user-management/user-management.component.scss
+++ b/mcarbonPortal/src/app/user-management/user-management.component.scss
@@ -56,7 +56,7 @@ th {
   width: 100%;
 }
 
-input{
+input {
   color: #009688;
 }
 .box input {
@@ -73,6 +73,10 @@ input{
   font-size: 18px;
 }
 
-.icon{
+.icon {
   padding-top: 5px;
+}
+
+th {
+  font-weight: bolder !important;
 }
