account table working fine

--- a/mcarbonPortal/src/app/dynamic-support/dynamic-support.component.html
+++ b/mcarbonPortal/src/app/dynamic-support/dynamic-support.component.html
@@ -183,7 +183,7 @@
                 </form>
               </mat-tab>
 
-              <mat-tab label="Notification"
+              <mat-tab label="Call on App"
                 ><form id="form1" [formGroup]="userForm" *ngIf="userForm">
                   <div class="">
                     <div class="row row-content">
