--- a/mcarbonPortal/src/app/account-management/account-management.component.html
+++ b/mcarbonPortal/src/app/account-management/account-management.component.html
@@ -86,12 +86,12 @@
                   <td mat-cell *matCellDef="let account">{{ account.name }}</td>
                 </ng-container>
 
-                <ng-container matColumnDef="contact">
+                <!-- <ng-container matColumnDef="contact">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header>
                     Contact
                   </th>
                   <td mat-cell *matCellDef="let account">
-                    {{ account.contact }}%
+                    {{ account.contact }}
                   </td>
                 </ng-container>
 
@@ -101,6 +101,20 @@
                   </th>
                   <td mat-cell *matCellDef="let account">
                     {{ account.email }}
+                  </td>
+                </ng-container> -->
+
+                <ng-container matColumnDef="access">
+                  <th mat-header-cell *matHeaderCellDef>Access Details</th>
+                  <td mat-cell *matCellDef="let account">
+                    {{ account.accessId }}
+                  </td>
+                </ng-container>
+
+                <ng-container matColumnDef="features">
+                  <th mat-header-cell *matHeaderCellDef>Feature Details</th>
+                  <td mat-cell *matCellDef="let account">
+                    {{ account.features }}
                   </td>
                 </ng-container>
 
@@ -112,7 +126,7 @@
                     {{ account.expDate }}
                   </td>
                 </ng-container>
-                
+
                 <ng-container matColumnDef="status">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header>
                     Status
@@ -136,9 +150,9 @@
                       [matMenuTriggerFor]="menu"
                       aria-label="Example icon-button with a menu"
                     >
-                      <mat-icon>more_vert</mat-icon>
+                      <mat-icon>more_horiz</mat-icon>
                     </button>
-                    <mat-menu #menu="matMenu" xPosition="before">
+                    <mat-menu #menu="matMenu" xPosition="after">
                       <button
                         class="btn-action"
                         mat-menu-item
@@ -195,7 +209,7 @@
                   ></tr> -->
 
                 <tr class="mat-row" *matNoDataRow>
-                  <td class="mat-cell" colspan="4">
+                  <td class="mat-cell" colspan="6">
                     No data matching the filter "{{ input.value }}"
                   </td>
                 </tr>
