--- a/mcarbonPortal/src/app/create-account/create-account.component.html
+++ b/mcarbonPortal/src/app/create-account/create-account.component.html
@@ -143,7 +143,7 @@
 
         <div class="row">
           <div class="col-md-10 offset-md-1">
-            <mat-label>Select the Access you want:</mat-label>
+            <mat-label class="label">Select the Access you want:</mat-label>
           </div>
         </div>
 
@@ -166,7 +166,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-10 offset-md-1">
-            <mat-label>Select the features you want:</mat-label>
+            <mat-label class="label">Select the features you want:</mat-label>
           </div>
         </div>
         <div class="row">
