--- a/mcarbonPortal/src/app/user-management/user-management.component.html
+++ b/mcarbonPortal/src/app/user-management/user-management.component.html
@@ -93,6 +93,13 @@
                   <td mat-cell *matCellDef="let user">{{ user.userLname }}</td>
                 </ng-container>
 
+                <!-- <ng-container matColumnDef="userFname">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                    Name
+                  </th>
+                  <td mat-cell *matCellDef="let user">{{ user.userFname }} {{user.userLname}} </td>
+                </ng-container> -->
+
                 <ng-container matColumnDef="loginId">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header>
                     Login ID
@@ -112,6 +119,20 @@
                     Email
                   </th>
                   <td mat-cell *matCellDef="let user">{{ user.email }}</td>
+                </ng-container>
+
+                <ng-container matColumnDef="access">
+                  <th mat-header-cell *matHeaderCellDef>Access Details</th>
+                  <td mat-cell *matCellDef="let user">
+                    {{ user.accessId }}
+                  </td>
+                </ng-container>
+
+                <ng-container matColumnDef="features">
+                  <th mat-header-cell *matHeaderCellDef>Feature Details</th>
+                  <td mat-cell *matCellDef="let user">
+                    {{ user.features }}
+                  </td>
                 </ng-container>
 
                 <ng-container matColumnDef="expDate">
@@ -194,7 +215,7 @@
                 ></tr>
 
                 <tr class="mat-row" *matNoDataRow>
-                  <td class="mat-cell" colspan="4">
+                  <td class="mat-cell" colspan="10">
                     No data matching the filter "{{ input.value }}"
                   </td>
                 </tr>
