user table working fine

--- a/mcarbonPortal/src/app/user-management/user-management.component.html
+++ b/mcarbonPortal/src/app/user-management/user-management.component.html
@@ -83,14 +83,14 @@
                   <th mat-header-cell *matHeaderCellDef mat-sort-header>
                     First Name
                   </th>
-                  <td mat-cell *matCellDef="let user">{{ user.userFname }}</td>
+                  <td mat-cell *matCellDef="let user">{{ user.fname }}</td>
                 </ng-container>
 
                 <ng-container matColumnDef="userLname">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header>
                     Last Name
                   </th>
-                  <td mat-cell *matCellDef="let user">{{ user.userLname }}</td>
+                  <td mat-cell *matCellDef="let user">{{ user.lname }}</td>
                 </ng-container>
 
                 <!-- <ng-container matColumnDef="userFname">
