--- a/mcarbonPortal/src/app/account-management/account-management.component.html
+++ b/mcarbonPortal/src/app/account-management/account-management.component.html
@@ -72,14 +72,6 @@
                 [dataSource]="dataSourceWithPageSize"
                 #sort="matSort"
               >
-                <!-- <ng-container
-                    [matColumnDef]="column"
-                    *ngFor="let column of displayedColumns"
-                  >
-                    <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
-                    <td mat-cell *matCellDef="let user">{{ user[column] }}</td>
-                  </ng-container> -->
-
                 <ng-container matColumnDef="name">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header>
                     Name
@@ -149,7 +141,7 @@
                       <button
                         class="btn-action"
                         mat-menu-item
-                        (click)="updateDialog(user.userCode)"
+                        (click)="updateAccountDialog(account)"
                         *ngIf="showEdit"
                       >
                         <mat-icon style="color: #009688">edit</mat-icon>
@@ -158,7 +150,7 @@
                       <button
                         class="btn-action"
                         mat-menu-item
-                        (click)="deleteData(user.userCode)"
+                        (click)="deleteAccount(account)"
                         *ngIf="showDelete"
                       >
                         <mat-icon style="color: #009688"
@@ -169,7 +161,7 @@
                       <button
                         class="btn-action"
                         mat-menu-item
-                        (click)="expireData()"
+                        (click)="expireAccount(account)"
                       >
                         <mat-icon style="color: #009688"
                           >power_settings_new</mat-icon
@@ -186,13 +178,6 @@
                   *matRowDef="let account; columns: displayedColumns"
                 ></tr>
 
-                <!-- Render Column Name -->
-                <!-- <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                  <tr
-                    mat-row
-                    *matRowDef="let user; columns: displayedColumns"
-                  ></tr> -->
-
                 <tr class="mat-row" *matNoDataRow>
                   <td class="mat-cell" colspan="6">
                     No data matching the filter "{{ input.value }}"
@@ -204,17 +189,6 @@
                 [pageSizeOptions]="pageSizes"
                 showFirstLastButtons
               ></mat-paginator>
-
-              <!-- <mat-sort #sort (matSortChange)="dataSourceWithPageSize.sort = sort">
-                  <ng-container *ngFor="let column of displayedColumns">
-                    <mat-sort-header
-                      [matSortHeaderDisableClear]="true"
-                      [direction]="dataSourceWithPageSize.sort?.direction"
-                      [active]="column === dataSourceWithPageSize.sort?.active"
-                      >{{ column | titlecase }}</mat-sort-header
-                    >
-                  </ng-container>
-                </mat-sort> -->
             </div>
           </div>
         </div>
